RESOLVED FIXED94314
[GTK] Missing transfer annotations for webkit_web_context_get_default
https://bugs.webkit.org/show_bug.cgi?id=94314
Summary [GTK] Missing transfer annotations for webkit_web_context_get_default
Jesse van den Kieboom
Reported 2012-08-17 01:56:56 PDT
There is a missing semicolon for the transfer annotation in webkit_web_context_get_default. Patch attached.
Attachments
Fixed transfer annotation (913 bytes, patch)
2012-08-17 06:39 PDT, Jesse van den Kieboom
no flags
Fixed transfer annotation for default web context (1.63 KB, patch)
2012-10-30 11:31 PDT, Jesse van den Kieboom
no flags
Carlos Garcia Campos
Comment 1 2012-08-17 06:06:50 PDT
It seems you forgot to attach the patch :-)
Jesse van den Kieboom
Comment 2 2012-08-17 06:39:45 PDT
Created attachment 159109 [details] Fixed transfer annotation Hmm, seems it didn't work while filing the new bug report at the same time (maybe I forgot to add a description). Anyway, here it is. It's trivial. I'll also make a new patch including the ChangeLog.
Jesse van den Kieboom
Comment 3 2012-10-30 02:29:41 PDT
Ping!
Carlos Garcia Campos
Comment 4 2012-10-30 02:38:04 PDT
(In reply to comment #3) > Ping! "I'll also make a new patch including the ChangeLog." :-)
Jesse van den Kieboom
Comment 5 2012-10-30 11:31:46 PDT
Created attachment 171489 [details] Fixed transfer annotation for default web context Ah right! Added a changelog entry.
Martin Robinson
Comment 6 2012-10-30 11:34:31 PDT
Comment on attachment 171489 [details] Fixed transfer annotation for default web context Thanks!
WebKit Review Bot
Comment 7 2012-10-30 13:18:27 PDT
Comment on attachment 171489 [details] Fixed transfer annotation for default web context Clearing flags on attachment: 171489 Committed r132940: <http://trac.webkit.org/changeset/132940>
WebKit Review Bot
Comment 8 2012-10-30 13:18:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.