Fixed transfer annotation for default web context https://bugs.webkit.org/show_bug.cgi?id=94314

Patch by Jesse van den Kieboom <jessevdk@gnome.org> on 2012-10-30
Reviewed by Martin Robinson.

Add a missing colon which prevented the transfer annotation of
webkit_web_context_get_default to be parsed correctly.

* UIProcess/API/gtk/WebKitWebContext.cpp:

Canonical link: https://commits.webkit.org/118821@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132940 268f45cc-cd09-0410-ab3c-d52691b4dbfc